fix smthg i've broken in last commit

--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,7 @@ code {
   height: 80vh;
   padding: 20px;
 }
+
+.loading {
+  width: 500px;
+}
